# pacsearch-rs

./: Cargo.toml  README.md
src/: lib.rs
src/official/: details.rs  files.rs  lib.rs  mod.rs  search.rs  search_types.rs  types.rs
