[package]
name = "pacsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
